cfn-template.yml
AWSTemplateFormatVersion: 2010-09-09

Description: |
   CloudFormation Template for Roman Numerals Converter Application. This template creates Python Flask Web Application on Amazon Linux 2 (ami-0022f774911c1d690) EC2 Instance with custom security group allowing http connections on port 80 and SSH connection on port 22. Roman Numerals Converter Application is downloaded from Github repository, then installed on Flask.

  
Parameters:
  pKeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Enter your key pair name
    
  
Resources:
  rMySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP & SSH for EC2 Instance
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  rWebServerHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0022f774911c1d690
      InstanceType: t2.micro
      KeyName: !Ref pKeyName
      SecurityGroupIds:
        -  !Ref rMySecurityGroup
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData: !Base64 |
          #!/bin/bash
          yum update -y 
          yum install python3 -y
          pip3 install flask
          cd /home/ec2-user
          wget https://raw.githubusercontent.com/momoch4n/001-Roman-Numerals-Converter/main/app.py
          mkdir templates && cd templates
          wget https://raw.githubusercontent.com/momoch4n/001-Roman-Numerals-Converter/main/templates/index.html
          wget https://raw.githubusercontent.com/momoch4n/001-Roman-Numerals-Converter/main/templates/result.html
          cd .. 
          python3 app.py
  

  
Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt rWebServerHost.PublicDnsName
    Description: Roman Numerals Converter Application URL
